--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@reduxjs/toolkit": "^1.9.5",
     "@syncfusion/ej2": "^19.4.48",
     "@syncfusion/ej2-react-calendars": "^19.4.48",
     "@syncfusion/ej2-react-charts": "^19.4.50",
@@ -15,16 +16,17 @@
     "@syncfusion/ej2-react-richtexteditor": "^19.4.50",
     "@syncfusion/ej2-react-schedule": "^19.4.50",
     "@tremor/react": "^3.6.6",
+    "antd": "^5.5.2",
+    "axios": "^1.4.0",
+    "dayjs": "^1.11.7",
+    "formik": "^2.2.9",
+    "query-string": "^8.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "dayjs": "^1.11.7",
-    "formik": "^2.2.9",
-    "axios": "^1.4.0",
-    "@reduxjs/toolkit": "^1.9.5",
-    "react-redux": "^8.0.5",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
